Fixed MAGETWO-9504: [Electron]: White space appears on the bottom of not home pages - corrected license placeholders to pass static tests

--- a/app/design/frontend/magento2/electron/css/styles.css
+++ b/app/design/frontend/magento2/electron/css/styles.css
@@ -1,3 +1,11 @@
+/**
+ * {license_notice}
+ *
+ * @category    design
+ * @package     magento2_electron
+ * @copyright   {copyright}
+ * @license     {license_link}
+ */
 @font-face {
   font-family: 'MUI-Icons';
   src: url('../../reference/mui/fonts/MUI-Icons.eot');
