--- a/app/design/frontend/magento2/piece-of-cake/css/styles.css
+++ b/app/design/frontend/magento2/piece-of-cake/css/styles.css
@@ -162,21 +162,9 @@ body {
   -moz-box-shadow: @arguments;
   -webkit-box-shadow: @arguments;
 }*/
-/**
- * {license_notice}
- *
- * @copyright  {copyright}
- * @license    {license_link}
- */
 /* =============================================================================
    Switchable terms
    ========================================================================== */
-/**
- * {license_notice}
- *
- * @copyright  {copyright}
- * @license    {license_link}
- */
 /*
     Fieldset
 -------------------------------------- */
